# stock_signal

./: .env  Cargo.toml  README.md
results/: scan_20260423_082925.jsonl  scan_20260423_084453.jsonl  scan_20260423_085232.jsonl
src/: config.rs  indicators.rs  lib.rs  llm.rs  logic.rs  main.rs  market.rs  snapshot.rs  watcher.rs
